syntax = "proto3";

package flipt.analytics;

option go_package = "go.flipt.io/flipt/rpc/flipt/analytics";

message GetFlagEvaluationsCountRequest {
    string namespace_key = 1;
    string flag_key = 2;
    string from = 3;
    string to = 4;
}

message GetFlagEvaluationsCountResponse {
    repeated string timestamps = 1;
    repeated float values = 2;
}

// flipt:sdk:ignore
service AnalyticsService {
    rpc GetFlagEvaluationsCount(GetFlagEvaluationsCountRequest) returns (GetFlagEvaluationsCountResponse) {}
}
